# SOLDER_CUBE

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  JsonUtility.cpp  JsonUtility.hpp  WiFi-STA.c  WiFi-STA.h  app_main.c  button.c  button.h  esp_setup.c  esp_setup.h  ethernet.c  ethernet.h  mqtt.c  mqtt.h  solder_cube_error.h
